# capguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
capguard/: __init__.py  audit.py  budget.py  cli.py  detectors.py  mcp_auth.py  mcp_guard.py  mcp_http.py  mcp_proxy.py  net_safety.py  packs.py  policy_dsl.py  policy_sync.py  runtime.py  sandbox.py
capguard/bench/: agentdojo_adapter.py  harness.py  suite_agentdojo_like.py
docs/: BENCHMARK_RESULTS.md  ENHANCEMENT_PLAN_2026H1.md  STRATEGY.md  cli.md  index.md  mcp-proxy.md  quickstart.md  security-model.md
examples/: demo_poison_strip.py  e2e_realtime_validate.py  echo_mcp_server.py  sample_tools.json
tests/: test_adapters.py  test_audit_graph.py  test_budget.py  test_capguard.py  test_cli.py  test_cloud_sink.py  test_detectors.py  test_init.py  test_jwks_auth.py  test_mcp_and_approval.py  test_mcp_auth.py  test_mcp_http.py  test_mcp_proxy.py  test_memory.py  test_packaging_metadata.py  test_policy_sync.py  test_properties.py  test_provenance.py  test_sandbox.py
